crates/chems-lang/src/parser.rs
use crate::{
    ByteSpan, ChemicalSyntaxKind, ClaimKind, CommentAttachment, CommentPlacement, Cst,
    DeclarationKind, Diagnostic, EquationSyntaxKind, HeaderKind, LexResult, NameSyntaxKind,
    ObservationKind, OperationKind, QuantitySyntaxKind, SectionKind, SourceAst,
    SourceCatalogueSelection, SourceExpectation, SourceExperiment, SourceLanguageVersion,
    SourceModel, SourceNode, SourceNodeKind, SyntaxNode, TacticKind, Token, TokenKind, lex_bytes,
    lex_source,
};

#[derive(Debug, Clone)]
pub struct ParseResult {
    pub cst: Cst,
    pub ast: SourceAst,
    pub diagnostics: Vec<Diagnostic>,
}

impl ParseResult {
    #[must_use]
    pub fn is_complete(&self) -> bool {
        self.ast.complete && self.diagnostics.is_empty()
    }
}

#[must_use]
pub fn parse_bytes(bytes: &[u8]) -> ParseResult {
    parse_lexed(lex_bytes(bytes))
}

#[must_use]
pub fn parse_source(source: &str) -> ParseResult {
    parse_lexed(lex_source(source))
}

fn parse_lexed(lexed: LexResult) -> ParseResult {
    let semantic = lexed
        .tokens
        .iter()
        .enumerate()
        .filter(|(_, token)| !token.kind.is_trivia())
        .map(|(index, _)| index)
        .collect();
    let mut parser = Parser {
        source: &lexed.source,
        tokens: &lexed.tokens,
        semantic,
        position: 0,
        last_end: 0,
        stack: Vec::new(),
        trace: Vec::new(),
        diagnostics: lexed.diagnostics,
        language_version: None,
        catalogue: None,
        experiment: None,
    };
    parser.begin("document");
    parser.parse_document();
    let root = parser.finish(false);
    parser.sort_diagnostics();
    let complete = parser.diagnostics.is_empty() && parser.language_version.as_deref() == Some("1");
    let mut production_trace = std::mem::take(&mut parser.trace);
    production_trace.sort();
    production_trace.dedup();
    let comments = attach_comments(parser.source, parser.tokens, &root);
    let language_version = parser.language_version.clone();
    let catalogue = parser.catalogue.clone();
    let experiment = parser.experiment.clone();
    let document = lower_source_node(parser.source, &root);
    let language = source_language(language_version, &document);
    let catalogue = source_catalogue(catalogue, &document);
    let experiment = source_experiment(experiment, &document);
    let diagnostics = std::mem::take(&mut parser.diagnostics);
    drop(parser);
    let ast = SourceAst {
        schema_version: 1,
        complete,
        language,
        catalogue,
        experiment,
        document,
        production_trace,
        comments,
    };
    ParseResult {
        cst: Cst {
            schema_version: 1,
            source: lexed.source,
            tokens: lexed.tokens,
            root,
        },
        ast,
        diagnostics,
    }
}

struct NodeBuilder {
    kind: String,
    start: usize,
    children: Vec<SyntaxNode>,
    token_indices: Vec<usize>,
}

struct Parser<'a> {
    source: &'a str,
    tokens: &'a [Token],
    semantic: Vec<usize>,
    position: usize,
    last_end: usize,
    stack: Vec<NodeBuilder>,
    trace: Vec<String>,
    diagnostics: Vec<Diagnostic>,
    language_version: Option<String>,
    catalogue: Option<String>,
    experiment: Option<String>,
}

impl Parser<'_> {
    fn parse_document(&mut self) {
        self.consume_newlines();
        self.parse_language_header();
        self.consume_newlines();
        self.parse_catalog_use();
        self.consume_newlines();
        self.parse_experiment();
        self.consume_newlines();
        self.expect_kind(TokenKind::Eof, "end of file");
    }

    fn parse_language_header(&mut self) {
        self.begin("language-header");
        if !self.eat_literal("chems") {
            self.error(
                "CHEMS-P001",
                "source must begin with `chems 1`",
                self.current_span(),
            );
        }
        self.begin("language-version");
        let version_span = self.current_span();
        let version = self.parse_positive_integer();
        let missing = version.is_none();
        self.finish(missing);
        if let Some(version) = &version {
            self.language_version = Some(version.clone());
            if !version.starts_with('0') && version != "1" {
                self.error(
                    "CHEMS-P002",
                    format!("unsupported .chems language major {version}"),
                    version_span,
                );
            }
        }
        self.expect_newline();
        self.finish(missing);
    }

    fn parse_catalog_use(&mut self) {
        self.begin("catalog-use");
        self.expect_literal("use");
        self.expect_literal("catalog");
        let name = self.parse_qualified_name();
        self.expect_literal("@");
        self.begin("catalog-version");
        self.parse_integer();
        while self.eat_literal(".") {
            self.parse_integer();
        }
        self.finish(false);
        self.expect_newline();
        self.catalogue = name;
        self.finish(false);
    }

    fn parse_experiment(&mut self) {
        self.begin("experiment");
        self.expect_literal("experiment");
        self.experiment = self.parse_type_identifier();
        self.expect_literal("where");
        self.expect_newline();
        self.expect_indent("an indented experiment body");
        self.parse_conditions_section();
        if self.at_literal("assuming") {
            self.parse_assumptions_section();
        }
        self.parse_given_section();
        self.parse_vessels_section();
        self.parse_procedure_section();
        self.parse_model_section();
        while self.at_literal("expect") {
            self.parse_expectation_section();
        }
        self.parse_proof_section();
        self.expect_kind(TokenKind::Dedent, "the end of the experiment body");
        self.finish(false);
    }

    fn parse_conditions_section(&mut self) {
        self.begin("conditions-section");
        self.expect_literal("conditions");
        self.expect_newline();
        self.expect_indent("an indented conditions block");
        let mut entries = 0;
        while !self.at_kind(TokenKind::Dedent) && !self.at_kind(TokenKind::Eof) {
            if self.at_kind(TokenKind::Newline) {
                self.bump();
                continue;
            }
            self.parse_condition_entry();
            entries += 1;
        }
        if entries == 0 {
            self.error_here("CHEMS-P003", "conditions requires at least one entry");
        }
        self.expect_kind(TokenKind::Dedent, "the end of conditions");
        self.consume_newlines();
        self.finish(entries == 0);
    }

    fn parse_condition_entry(&mut self) {
        self.begin("condition-entry");
        match self.peek_text() {
            Some("temperature") => {
                self.begin("temperature-entry");
                self.bump();
                self.expect_literal(":=");
                self.parse_quantity();
                self.expect_newline();
                self.finish(false);
            }
            Some("pressure") => {
                self.begin("pressure-entry");
                self.bump();
                self.expect_literal(":=");
                self.parse_quantity();
                self.expect_newline();
                self.finish(false);
            }
            Some("medium") => {
                self.begin("medium-entry");
                self.bump();
                self.expect_literal(":=");
                if !self.eat_literal("aqueous") {
                    self.parse_qualified_name();
                }
                self.expect_newline();
                self.finish(false);
            }
            _ => self.recover_line("expected temperature, pressure, or medium"),
        }
        self.finish(false);
    }

    fn parse_assumptions_section(&mut self) {
        self.begin("assumptions-section");
        self.expect_literal("assuming");
        self.expect_newline();
        self.expect_indent("an indented assumptions block");
        let mut count = 0;
        while !self.at_kind(TokenKind::Dedent) && !self.at_kind(TokenKind::Eof) {
            if self.at_kind(TokenKind::Newline) {
                self.bump();
                continue;
            }
            self.begin("assumption-entry");
            self.parse_qualified_name();
            if self.eat_literal("for") {
                self.parse_value_identifier();
            }
            if self.eat_literal("at") {
                self.parse_stage_reference();
            }
            self.expect_newline();
            self.finish(false);
            count += 1;
        }
        if count == 0 {
            self.error_here("CHEMS-P003", "assuming requires at least one entry");
        }
        self.expect_kind(TokenKind::Dedent, "the end of assumptions");
        self.consume_newlines();
        self.finish(count == 0);
    }

    fn parse_given_section(&mut self) {
        self.begin("given-section");
        self.expect_literal("given");
        self.expect_newline();
        self.expect_indent("an indented given block");
        let mut count = 0;
        while !self.at_kind(TokenKind::Dedent) && !self.at_kind(TokenKind::Eof) {
            if self.at_kind(TokenKind::Newline) {
                self.bump();
                continue;
            }
            self.parse_material_declaration();
            count += 1;
        }
        if count == 0 {
            self.error_here("CHEMS-P003", "given requires at least one material");
        }
        self.expect_kind(TokenKind::Dedent, "the end of given");
        self.consume_newlines();
        self.finish(count == 0);
    }

    fn parse_material_declaration(&mut self) {
        self.begin("material-declaration");
        self.parse_value_identifier();
        self.expect_literal(":=");
        self.begin("material-expression");
        if self.at_literal("prepared") {
            self.begin("prepared-material");
            self.bump();
            self.expect_newline();
            self.expect_indent("prepared components");
            let mut count = 0;
            while !self.at_kind(TokenKind::Dedent) && !self.at_kind(TokenKind::Eof) {
                if self.at_kind(TokenKind::Newline) {
                    self.bump();
                    continue;
                }
                self.begin("component-entry");
                self.parse_quantity();
                self.expect_literal("of");
                self.parse_species();
                self.expect_newline();
                self.finish(false);
                count += 1;
            }
            if count == 0 {
                self.error_here("CHEMS-P003", "prepared material requires components");
            }
            self.expect_kind(TokenKind::Dedent, "the end of prepared components");
            self.finish(count == 0);
        } else {
            self.begin("simple-material");
            self.parse_quantity();
            self.expect_literal("of");
            if self.starts_quantity() {
                self.parse_quantity();
            }
            self.parse_species();
            self.expect_newline();
            self.finish(false);
        }
        self.finish(false);
        self.finish(false);
    }

    fn parse_vessels_section(&mut self) {
        self.begin("vessels-section");
        self.expect_literal("vessels");
        self.expect_newline();
        self.expect_indent("an indented vessels block");
        let mut count = 0;
        while !self.at_kind(TokenKind::Dedent) && !self.at_kind(TokenKind::Eof) {
            if self.at_kind(TokenKind::Newline) {
                self.bump();
                continue;
            }
            self.begin("vessel-declaration");
            self.parse_value_identifier();
            self.expect_literal(":=");
            self.begin("openness");
            if !(self.eat_literal("open") || self.eat_literal("closed")) {
                self.expected("`open` or `closed`");
            }
            self.finish(false);
            self.expect_literal("vessel");
            self.parse_quantity();
            self.expect_newline();
            self.finish(false);
            count += 1;
        }
        if count == 0 {
            self.error_here("CHEMS-P003", "vessels requires at least one declaration");
        }
        self.expect_kind(TokenKind::Dedent, "the end of vessels");
        self.consume_newlines();
        self.finish(count == 0);
    }

    fn parse_procedure_section(&mut self) {
        self.begin("procedure-section");
        self.expect_literal("procedure");
        self.expect_newline();
        self.expect_indent("an indented procedure block");
        let mut count = 0;
        while !self.at_kind(TokenKind::Dedent) && !self.at_kind(TokenKind::Eof) {
            if self.at_kind(TokenKind::Newline) {
                self.bump();
                continue;
            }
            self.begin("procedure-entry");
            if self.peek_kind_n(1) == Some(&TokenKind::Colon) {
                self.begin("stage-label");
                self.parse_value_identifier();
                self.finish(false);
                self.expect_literal(":");
            }
            self.parse_operation();
            self.expect_newline();
            self.finish(false);
            count += 1;
        }
        if count == 0 {
            self.error_here("CHEMS-P003", "procedure requires at least one operation");
        }
        self.expect_kind(TokenKind::Dedent, "the end of procedure");
        self.consume_newlines();
        self.finish(count == 0);
    }

    fn parse_model_section(&mut self) {
        self.begin("model-section");
        if !self.eat_literal("model") {
            self.error(
                "CHEMS-P007",
                "every .chems 1 experiment requires a `model` section",
                self.current_span(),
            );
        }
        self.expect_newline();
        self.expect_indent("an indented model block");

        self.begin("event-model-entry");
        self.expect_literal("event");
        self.expect_literal(":=");
        self.expect_literal("representative");
        self.expect_newline();
        self.finish(false);

        self.begin("sequence-model-entry");
        self.expect_literal("sequence");
        self.expect_literal(":=");
        self.expect_literal("explanatory");
        self.expect_newline();
        self.finish(false);

        self.begin("structural-rule-entry");
        self.expect_literal("structuralRule");
        self.expect_literal(":=");
        self.parse_qualified_name();
        self.expect_newline();
        self.finish(false);

        self.consume_newlines();
        self.expect_kind(TokenKind::Dedent, "the end of model");
        self.consume_newlines();
        self.finish(false);
    }

    fn parse_operation(&mut self) {
        self.begin("operation");
        match self.peek_text() {
            Some("place") => self.parse_binary_operation("place-operation", &["place", "in"]),
            Some("add") => self.parse_binary_operation("add-operation", &["add", "to"]),
            Some("combine") => {
                self.begin("combine-operation");
                self.bump();
                self.parse_value_identifier();
                self.expect_literal("with");
                self.parse_value_identifier();
                self.expect_literal("in");
                self.parse_value_identifier();
                self.finish(false);
            }
            Some("transfer") => {
                self.begin("transfer-operation");
                self.bump();
                if self.starts_quantity() {
                    self.parse_quantity();
                }
                self.expect_literal("from");
                self.parse_value_identifier();
                self.expect_literal("to");
                self.parse_value_identifier();
                self.finish(false);
            }
            Some("stir") => {
                self.begin("stir-operation");
                self.bump();
                self.parse_value_identifier();
                if self.eat_literal("for") {
                    self.parse_quantity();
                }
                self.finish(false);
            }
            Some("heat") => self.parse_temperature_operation("heat-operation", "heat"),
            Some("cool") => self.parse_temperature_operation("cool-operation", "cool"),
            Some("wait") => {
                self.begin("wait-operation");
                self.bump();
                self.parse_quantity();
                self.finish(false);
            }
            Some("seal") => self.parse_unary_operation("seal-operation", "seal"),
            Some("open") => self.parse_unary_operation("open-operation", "open"),
            Some("filter") => {
                self.begin("filter-operation");
                self.bump();
                self.parse_value_identifier();
                self.expect_literal("into");
                self.parse_value_identifier();
                self.expect_literal("and");
                self.parse_value_identifier();
                self.finish(false);
            }
            Some("decant") => self.parse_binary_operation("decant-operation", &["decant", "into"]),
            _ => self.recover_to_newline("expected a procedure operation"),
        }
        self.finish(false);
    }

    fn parse_binary_operation(&mut self, kind: &str, keywords: &[&str]) {
        self.begin(kind);
        self.expect_literal(keywords[0]);
        self.parse_value_identifier();
        self.expect_literal(keywords[1]);
        self.parse_value_identifier();
        self.finish(false);
    }

    fn parse_unary_operation(&mut self, kind: &str, keyword: &str) {
        self.begin(kind);
        self.expect_literal(keyword);
        self.parse_value_identifier();
        self.finish(false);
    }

    fn parse_temperature_operation(&mut self, kind: &str, keyword: &str) {
        self.begin(kind);
        self.expect_literal(keyword);
        self.parse_value_identifier();
        self.expect_literal("to");
        self.parse_quantity();
        self.finish(false);
    }

    fn parse_expectation_section(&mut self) {
        self.begin("expectation-section");
        self.expect_literal("expect");
        if self.eat_literal("at") {
            self.parse_stage_reference();
        }
        self.expect_newline();
        self.expect_indent("an indented expectation block");
        let mut count = 0;
        while !self.at_kind(TokenKind::Dedent) && !self.at_kind(TokenKind::Eof) {
            if self.at_kind(TokenKind::Newline) {
                self.bump();
                continue;
            }
            self.parse_claim_entry();
            count += 1;
        }
        if count == 0 {
            self.error_here("CHEMS-P003", "expect requires at least one claim");
        }
        self.expect_kind(TokenKind::Dedent, "the end of expectation");
        self.consume_newlines();
        self.finish(count == 0);
    }

    fn parse_claim_entry(&mut self) {
        self.begin("claim-entry");
        match self.peek_text() {
            Some("class") => {
                self.begin("class-claim");
                self.bump();
                self.expect_literal(":=");
                if !self.parse_hole() {
                    self.begin("reaction-class");
                    if matches!(
                        self.peek_text(),
                        Some("precipitation" | "neutralization" | "gasFormation" | "noReaction")
                    ) {
                        self.bump();
                    } else {
                        self.expected("a reaction class or `?`");
                    }
                    self.finish(false);
                }
                self.expect_newline();
                self.finish(false);
            }
            Some("produces" | "consumes" | "remains" | "spectator") => {
                self.begin("identity-claim");
                self.begin("identity-predicate");
                self.bump();
                self.finish(false);
                if !self.parse_hole() {
                    self.parse_species();
                }
                self.expect_newline();
                self.finish(false);
            }
            Some("molecular" | "completeIonic" | "netIonic") => {
                self.parse_equation_claim();
            }
            Some("amount") => {
                self.begin("amount-claim");
                self.bump();
                self.parse_species();
                self.expect_literal(":=");
                if !self.parse_hole() {
                    self.parse_quantity();
                }
                self.expect_newline();
                self.finish(false);
            }
            Some("limiting") => {
                self.begin("limiting-claim");
                self.bump();
                self.expect_literal(":=");
                if !self.parse_hole() && !self.eat_literal("none") {
                    self.parse_value_identifier();
                }
                self.expect_newline();
                self.finish(false);
            }
            Some("observe") => self.parse_observation_section(),
            _ => self.recover_line("expected an expectation claim"),
        }
        self.finish(false);
    }

    fn parse_equation_claim(&mut self) {
        self.begin("equation-claim");
        self.begin("equation-kind");
        self.bump();
        self.finish(false);
        self.expect_literal(":=");
        self.begin("equation-claim-value");
        if self.parse_hole() {
            self.expect_newline();
        } else if self.at_kind(TokenKind::Newline) {
            self.bump();
            self.expect_indent("an indented equation");
            self.parse_equation();
            self.expect_newline();
            self.expect_kind(TokenKind::Dedent, "the end of the equation");
        } else {
            self.parse_equation();
            self.expect_newline();
        }
        self.finish(false);
        self.finish(false);
    }

    fn parse_observation_section(&mut self) {
        self.begin("observation-section");
        self.expect_literal("observe");
        self.expect_newline();
        self.expect_indent("an indented observation block");
        let mut count = 0;
        while !self.at_kind(TokenKind::Dedent) && !self.at_kind(TokenKind::Eof) {
            if self.at_kind(TokenKind::Newline) {
                self.bump();
                continue;
            }
            self.begin("observation-entry");
            match self.peek_text() {
                Some("precipitate") => {
                    self.begin("precipitate-observation");
                    self.bump();
                    if !self.parse_hole() {
                        self.parse_species();
                    }
                    self.expect_newline();
                    self.finish(false);
                }
                Some("gas") => {
                    self.begin("gas-observation");
                    self.bump();
                    if !self.parse_hole() {
                        self.parse_species();
                    }
                    self.expect_newline();
                    self.finish(false);
                }
                Some("colour") => {
                    self.begin("colour-observation");
                    self.bump();
                    self.expect_literal(":=");
                    if !self.parse_hole() {
                        self.parse_qualified_name();
                    }
                    self.expect_newline();
                    self.finish(false);
                }
                Some("temperatureChange") => {
                    self.begin("temperature-observation");
                    self.bump();
                    self.expect_literal(":=");
                    if !self.parse_hole() {
                        self.begin("temperature-direction");
                        if matches!(self.peek_text(), Some("increase" | "decrease" | "none")) {
                            self.bump();
                        } else {
                            self.expected("increase, decrease, none, or `?`");
                        }
                        self.finish(false);
                    }
                    self.expect_newline();
                    self.finish(false);
                }
                _ => self.recover_line("expected an observation"),
            }
            self.finish(false);
            count += 1;
        }
        if count == 0 {
            self.error_here("CHEMS-P003", "observe requires at least one entry");
        }
        self.expect_kind(TokenKind::Dedent, "the end of observations");
        self.finish(count == 0);
    }

    fn parse_proof_section(&mut self) {
        self.begin("proof-section");
        self.expect_literal("by");
        self.expect_newline();
        self.expect_indent("an indented proof block");
        let mut count = 0;
        while !self.at_kind(TokenKind::Dedent) && !self.at_kind(TokenKind::Eof) {
            if self.at_kind(TokenKind::Newline) {
                self.bump();
                continue;
            }
            self.parse_tactic();
            count += 1;
        }
        if count == 0 {
            self.error_here("CHEMS-P003", "by requires at least one tactic");
        }
        self.expect_kind(TokenKind::Dedent, "the end of proof");
        self.finish(count == 0);
    }

    fn parse_tactic(&mut self) {
        self.begin("tactic");
        let kind = match self.peek_text() {
            Some("dissociate") => "dissociate-tactic",
            Some("infer") => "infer-products-tactic",
            Some("balance") => "balance-tactic",
            Some("derive") => "derive-tactic",
            Some("cancel") => "cancel-spectators-tactic",
            Some("solve") => "solve-stoichiometry-tactic",
            Some("verify") if self.peek_text_n(1) == Some("atoms") => "verify-atoms-tactic",
            Some("verify") => "verify-charge-tactic",
            Some("prove") => "prove-observations-tactic",
            Some("close") => "close-tactic",
            Some("auto") => "auto-tactic",
            _ => {
                self.recover_line("expected a proof tactic");
                self.finish(true);
                return;
            }
        };
        self.begin(kind);
        match kind {
            "dissociate-tactic" => {
                self.expect_literal("dissociate");
                self.expect_literal("aqueous");
            }
            "infer-products-tactic" => {
                self.expect_literal("infer");
                self.expect_literal("products");
                self.expect_literal("using");
                self.parse_qualified_name();
            }
            "balance-tactic" => {
                self.expect_literal("balance");
                self.parse_equation_kind();
            }
            "derive-tactic" => {
                self.expect_literal("derive");
                self.parse_equation_kind();
            }
            "cancel-spectators-tactic" => {
                self.expect_literal("cancel");
                self.expect_literal("spectators");
            }
            "solve-stoichiometry-tactic" => {
                self.expect_literal("solve");
                self.expect_literal("stoichiometry");
            }
            "verify-atoms-tactic" => {
                self.expect_literal("verify");
                self.expect_literal("atoms");
            }
            "verify-charge-tactic" => {
                self.expect_literal("verify");
                self.expect_literal("charge");
            }
            "prove-observations-tactic" => {
                self.expect_literal("prove");
                self.expect_literal("observations");
            }
            "close-tactic" => {
                self.expect_literal("close");
            }
            "auto-tactic" => {
                self.expect_literal("auto");
            }
            _ => unreachable!(),
        }
        self.expect_newline();
        self.finish(false);
        self.finish(false);
    }

    fn parse_equation_kind(&mut self) {
        self.begin("equation-kind");
        if matches!(
            self.peek_text(),
            Some("molecular" | "completeIonic" | "netIonic")
        ) {
            self.bump();
        } else {
            self.expected("an equation kind");
        }
        self.finish(false);
    }

    fn parse_equation(&mut self) {
        self.begin("equation");
        self.parse_equation_side();
        if self.at_kind(TokenKind::Newline) && self.peek_text_n(1) == Some("->") {
            self.bump();
        }
        self.expect_literal("->");
        if self.at_kind(TokenKind::Newline) {
            self.bump();
        }
        self.parse_equation_side();
        self.finish(false);
    }

    fn parse_equation_side(&mut self) {
        self.begin("equation-side");
        self.parse_equation_term();
        loop {
            if self.eat_literal("+") {
                if self.at_kind(TokenKind::Newline) {
                    self.bump();
                }
                self.parse_equation_term();
            } else if self.at_kind(TokenKind::Newline) && self.peek_text_n(1) == Some("+") {
                self.bump();
                self.bump();
                if self.at_kind(TokenKind::Newline) {
                    self.bump();
                }
                self.parse_equation_term();
            } else {
                break;
            }
        }
        self.finish(false);
    }

    fn parse_equation_term(&mut self) {
        self.begin("equation-term");
        if self.at_kind(TokenKind::Number) {
            self.parse_positive_integer();
            self.require_separator_after(self.last_end, "an equation coefficient");
        }
        self.parse_species();
        self.finish(false);
    }

    fn parse_species(&mut self) {
        self.begin("species");
        self.parse_formula();
        let formula_end = self.last_end;
        if self.at_literal("^") {
            self.require_compact_after(formula_end, "a formula and its charge");
            self.begin("charge");
            self.bump();
            let caret_end = self.last_end;
            if self.at_kind(TokenKind::Number) {
                self.require_compact_after(caret_end, "a charge marker and magnitude");
                self.parse_positive_integer();
            }
            let magnitude_end = self.last_end;
            self.require_compact_after(magnitude_end, "a charge and its sign");
            if !(self.eat_literal("+") || self.eat_literal("-")) {
                self.expected("a charge sign");
            }
            self.finish(false);
        }
        let charge_end = self.last_end;
        self.require_compact_after(charge_end, "a formula or charge and its phase");
        self.begin("phase");
        self.expect_literal("(");
        let opener_end = self.last_end;
        self.require_compact_after(opener_end, "a phase opener and phase symbol");
        if matches!(self.peek_text(), Some("aq" | "s" | "l" | "g")) {
            self.bump();
        } else {
            self.expected("aq, s, l, or g");
        }
        let phase_end = self.last_end;
        self.require_compact_after(phase_end, "a phase symbol and closer");
        self.expect_literal(")");
        self.finish(false);
        self.finish(false);
    }

    fn parse_formula(&mut self) {
        self.begin("formula");
        self.parse_formula_segment();
        while self.at_literal(".") {
            self.require_compact_after(self.last_end, "formula adduct punctuation");
            self.bump();
            let dot_end = self.last_end;
            if self.at_kind(TokenKind::Number) {
                self.require_compact_after(dot_end, "an adduct dot and coefficient");
                self.parse_positive_integer();
            }
            self.require_compact_after(self.last_end, "an adduct coefficient and formula");
            self.parse_formula_segment();
        }
        self.finish(false);
    }
